Create cluster proxy for MV related controllers. (#1052)